# document-store

./: README.md  pyproject.toml
src/example_store/: document_store.py  retriever.py
src/haystack_integrations/document_stores/example_store/: __init__.py  document_store.py
src/haystack_integrations/retrievers/example_store/: __init__.py  retriever.py
tests/: test_document_store.py
